# Castafiore

./: .gitignore  Cargo.toml  README.md
client_app/: Cargo.toml
client_app/src/: lib.rs
client_cli/: Cargo.toml
client_cli/src/: main.rs
client_model/: Cargo.toml
client_model/src/: lib.rs
db_wrapper/: Cargo.toml
db_wrapper/src/: csvdb.rs  lib.rs  surrealdb.rs
db_wrapper/src/csvdb/: client_db.rs
db_wrapper/src/surrealdb/: client_db.rs  library_db.rs
doc/: Contract.md  Projektförslag.md
file_io/: Cargo.toml
file_io/src/: client_file_io.rs  lib.rs
file_parser/: Cargo.toml
file_parser/src/: lib.rs
gui/: CMakeLists.txt  corrosion_cxx.cmake
gui/cpp/: homemodel.cpp  homemodel.h  librarymodel.cpp  librarymodel.h  main.cpp  rust_util.h
gui/qml/: HomeView.qml  HomeViewDelegate.qml  LibraryView.qml  LibraryViewDelegate.qml  PDFReader.qml  main.qml  qml.qrc
gui/rust/cxx_layer/: Cargo.toml  build.rs
gui/rust/cxx_layer/src/: client_cxx.rs  lib.rs  library_cxx.rs
library_app/: Cargo.toml
library_app/src/: lib.rs
library_model/: Cargo.toml
library_model/src/: lib.rs
library_types/: Cargo.toml
library_types/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
test_directory/: pg70413.epub
