[package]
name = "client_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_io =  { path = "../file_io" }
library_types = { path = "../library_types" }
client_model = { path = "../client_model" }
server = { path = "../server" }
prettytable-rs = "0.10.0"
tokio = "1.28.0"
lazy_static = "1.4.0"
