[package]
name = "client_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.14", features = ["derive"] }
client_app = { path = "../client_app" }
server = { path = "../server" }
tokio = { version = "1.13.0", features = ["full"] }
inquire = "0.6.1"