[package]
name = "client_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library_types = { path = "../library_types" }
db_wrapper = { path = "../db_wrapper" }
file_io = { path = "../file_io" }
server = { path = "../server" }
lazy_static = "1.4.0"
dirs = "5.0.0"
directories = "5.0.0"
