[package]
name = "db_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9", features = ["kv-mem"] }
serde = { version = "1.0", features = ["derive"] }
library_types = { path = "../library_types" }
serde_json = "1.0.70"
tokio = { version = "1.0", features = ["full"] }
csv = "1.1.6"
async-trait = "0.1.68"
lazy_static = "1.4.0"
async_once = "0.2.6"
[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
