[package]
name = "library_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library_types = { path = "../library_types" }
db_wrapper = { path = "../db_wrapper" }
file_io = { path = "../file_io"}
file_parser = { path = "../file_parser"}
tokio = { version = "1.27.0", features = ["full"] }
async-recursion = "1.0.4"